--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.17.0-beta.1",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "squishable-container": "^0.1.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
